--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -17,7 +17,7 @@
                 <div class="brand-icon">
                     <i class="bi bi-grid-3x3-gap-fill"></i>
                 </div>
-                <h4 class="brand-text">InventoryPro</h4>
+                <h4 class="brand-text">Webo-Save PRO</h4>
             </div>
         </div>
         
